dice unit tests

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "cwb",
   "version": "1.0.0",
   "description": "cwb: An Ionic project",
+  "scripts": {
+    "test": "node ./node_modules/karma/bin/karma start ./test/config/karma-unit.conf.js",
+	"test-dev": "node ./node_modules/karma/bin/karma start ./test/config/karma-unit-dev.conf.js"
+  },  
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^1.3.3",
@@ -12,7 +16,19 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",	
+    "karma": "0.12.32",
+    "karma-chai": "=0.0.1",
+    "karma-chrome-launcher": "~0.1.3",
+    "karma-junit-reporter": "*",
+    "karma-mocha": "=0.1.0",
+    "karma-chai": "=0.0.1",
+    "karma-sinon": "^1.0.4",
+    "karma-sinon-chai": "^0.2.0",
+    "karma-ng-i18n-preprocessor": "0.0.1",
+    "karma-ng-jade2js-preprocessor": "^0.2.0",
+    "karma-ng-stripscript-preprocessor": "0.0.1",
+    "jasmine-reporters": "~0.2.1"
   },
   "cordovaPlugins": [
     "org.apache.cordova.device",
