--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,10 @@
   "name": "cwb",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-rc.2"
+    "ionic": "driftyco/ionic-bower#1.0.0-rc.2",
+    "bootstrap": "~3.3.4",
+    "font-awesome": "~4.3.0",
+    "lodash": "~3.8.0",
+    "moment": "~2.10.2"	
   }
 }
